First features (hotfixed mobile css) (#4)
* fixed testing

* Delete testinfo.cpython-313.pyc

* Create testinfo.cpython-313.pyc

* Update testinfo.cpython-313.pyc

* Update testinfo.cpython-313.pyc

* changed file names

* changed minor filename error

* First website features

* quick fix

* removed test files

* hotfixed mobile css

* changed css change from 420px to 600px

--- a/website/style.css
+++ b/website/style.css
@@ -28,3 +28,11 @@ p.subtitle {
 .contactInfo, .openingHours {
     font-size: 18px;
 }
+
+
+@media screen and (max-width: 600px){
+
+    .header {
+        width: 100%;
+    }
+}
