--- a/website/style.css
+++ b/website/style.css
@@ -14,6 +14,8 @@ p {
 p.subtitle {
     font-size: 30px;
     line-height: 20px;
+    font-family: "Judson";
+    text-decoration-line: underline;
 }
 
 .header {
@@ -25,12 +27,29 @@ p.subtitle {
     border-radius: 50px;
 }
 
+@font-face {
+    font-family: "Inter";
+    src: url("../fonts/Inter/Inter-VariableFont_opsz\,wght.ttf");
+}
+
+@font-face {
+    font-family: "Judson";
+    src: url("../fonts/Judson/Judson-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Labrada";
+    src: url("../fonts/Labrada/Labrada-VariableFont_wght.ttf");
+}
+
 .title {
     font-size: 45px;
+    font-family: "Labrada";
 }
 
 .contactInfo, .openingHours {
-    font-size: 23px;
+    font-size: 20px;
+    font-family: "Inter";
 }
 
 .openingHoursTable {
@@ -58,7 +77,7 @@ p.subtitle {
     }
 
     .contactInfo, .openingHours {
-        font-size: 18px;
+        font-size: 15px;
     }
 }
 
