--- a/website/style.css
+++ b/website/style.css
@@ -1,32 +1,3 @@
-body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #EEF2F5;
-}
-
-p {
-    line-height: 5px;
-}
-
-p.subtitle {
-    font-size: 30px;
-    line-height: 20px;
-    font-family: "Judson";
-    text-decoration-line: underline;
-}
-
-.header {
-    margin: auto;
-    padding: 8%;
-    text-align: center;
-    width: 70%;
-    background-color:#6FB684;
-    border-radius: 50px;
-}
-
 @font-face {
     font-family: "Inter";
     src: url("../fonts/Inter/Inter-VariableFont_opsz\,wght.ttf");
@@ -42,8 +13,49 @@ p.subtitle {
     src: url("../fonts/Labrada/Labrada-VariableFont_wght.ttf");
 }
 
+body {
+    margin: 0;
+    height: 100vh;
+    background-color: white;
+}
+
+p {
+    line-height: 5px;
+}
+
+p.subtitle {
+    font-size: 30px;
+    line-height: 20px;
+    font-family: "Judson";
+    text-decoration-line: underline;
+}
+
+.mainInfo {
+    background-color: #EEF2F5;
+    margin: auto;
+    width: 60%;
+    height: 300%;
+    padding: 3%;
+}
+
+.header {
+    left: 50%;
+    transform: translateX(-50%);
+    position: fixed;
+    margin: auto;
+    margin-top: -8.125%;
+    padding: 3%;
+    padding-top: 9%;
+    padding-bottom: 20px;
+    text-align: center;
+    width: 60%;
+    background-color:#6FB684;
+    border-radius: 50px;
+}
+
 .title {
     font-size: 45px;
+    line-height: 40px;
     font-family: "Labrada";
 }
 
@@ -55,6 +67,18 @@ p.subtitle {
 .openingHoursTable {
     margin: auto;
     text-align: left;
+}
+
+.bottomInfo {
+    background-color: #38855C;
+    position: relative;
+    text-align: center;
+    bottom: -290vh;
+    width: 100%;
+    padding: 5%;
+    padding-top: 20px;
+    height: fit-content;
+    left: -5%;
 }
 
 [openingHours] {
@@ -79,20 +103,32 @@ p.subtitle {
     .contactInfo, .openingHours {
         font-size: 15px;
     }
-}
 
-@media screen and (max-width: 600px){
-
-    .header {
-        width: 100%;
-        padding: 5%;
+    .bottomInfo {
+        bottom: -290vh;
     }
 }
 
-@media screen and (min-width: 800px){
+@media screen and (max-width: 700px){
+
+    .header, .mainInfo, .bottomInfo {
+        width: 100%;
+        padding: 0;
+    }
 
     .header {
-        width: 560px;
-        padding: 64px;
+        margin-top: -10%;
+        padding-top: 10%;
+        border-radius: 0;
+    }
+
+    .bottomInfo {
+        left: 0;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    p.subtitle {
+        line-height: 10px;
     }
 }
