--- a/website/style.css
+++ b/website/style.css
@@ -1,29 +1,34 @@
 @font-face {
     font-family: "Inter";
-    src: url("../fonts/Inter/Inter-VariableFont_opsz\,wght.ttf");
+    src: url("../fonts/inter/Inter-VariableFont_opsz\,wght.ttf");
 }
 
 @font-face {
     font-family: "Judson";
-    src: url("../fonts/Judson/Judson-Regular.ttf");
+    src: url("../fonts/judson/Judson-Regular.ttf");
+
 }
 
 @font-face {
     font-family: "Labrada";
-    src: url("../fonts/Labrada/Labrada-VariableFont_wght.ttf");
+    src: url("../fonts/labrada/Labrada-VariableFont_wght.ttf");
 }
 
 @font-face {
-    font-family: "Flower";
-    src: url("../fonts/flower_mandala_monogram/Flower\ Mandala\ Monogram.ttf");
+    font-family: "Swirl";
+    src: url("../fonts/Swirl_Leaf_Monogram/Swirl\ Leaf\ Monogram.ttf");
 }
 
-.allServices a {
-    color: black;
+div {
+    font-family: "Inter";
 }
 
 .allServices a:hover {
     text-decoration: none;
+}
+
+.products {
+    font-family: "Judson";
 }
 
 body {
@@ -44,13 +49,52 @@ p.subtitle {
 }
 
 .mainInfo {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background-color: #EEF2F5;
     margin: auto;
-    width: 60%;
-    height: 300%;
-    padding: 3%;
+    width: 66%;
+    height: max-content;
+    padding-top: 0;
     outline: 2px solid black;
     outline-offset: -2px;
+}
+
+.centerInfo {
+    padding-top: 140px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.productsPage {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.productsPage .productDescription, .productsPage .priceTag {
+    margin-left: 70px;
+}
+
+.productsPage img {
+    width: 250px;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+}
+.priceTag {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .header {
@@ -82,6 +126,14 @@ p.subtitle {
     font-family: "Judson";
 }
 
+.welcomeMessage {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-family: "Labrada";
+    font-size: 30px;
+}
+
 a.title {
     display: block;
     -webkit-transform: rotate(-2deg);  
@@ -110,8 +162,8 @@ a.title {
 }
 
 .logo {
-    font-size: 100px;
-    font-family: "Flower";
+    font-size: 45px;
+    font-family: "Swirl";
     color: #144723;
 }
 
@@ -132,12 +184,10 @@ a.title {
     background-color: #38855C;
     position: relative;
     text-align: center;
-    bottom: -290vh;
     width: 100%;
     padding: 5%;
     padding-top: 20px;
     height: fit-content;
-    left: -5%;
     justify-content: center;
     outline: 2px solid black;
     outline-offset: -2px;
@@ -152,34 +202,45 @@ a.title {
     color: rgb(39, 32, 32);
 }
 
+[textColor="greyish"] {
+    color: #8C8C8C;
+}
+
 [textColor="light"] {
     color: #EEF2F5;
 }
 
-@media screen and (max-width: 455px){
-
-    p.subtitle {
-        font-size: 23px;
-    }
-
-    a.title {
-        font-size: 35px;
-    }
+@media screen and (max-width: 1050px) {
 
     .contactInfo, .openingHours {
-        font-size: 15px;
+        border: none;
+        margin: auto;
     }
 
-    .allServices {
-        font-size: 18px;
+    .header {
+        top: 0px;
     }
 
-    .logo {
-        font-size: 70px;
+    .header .logo {
+        position: relative;
+        right: 0;
+        top: 0;
+        margin-top: 10px;
+        margin-bottom: -25px;
     }
 
-    .bottomInfo {
-        bottom: -290vh;
+    .centerInfo {
+        padding-top: 240px;
+    }
+}
+
+@media screen and (max-width: 850px){
+    .productsPage img {
+        width: 200px;
+    }
+
+    .productsPage .productDescription, .productsPage .priceTag {
+        margin-left: 40px;
     }
 }
 
@@ -207,18 +268,39 @@ a.title {
     }
 }
 
-@media screen and (max-width: 1050px) {
-
-    .contactInfo, .openingHours {
-        border: none;
-        margin: auto;
+@media screen and (max-width: 500px){
+    .productsPage img {
+        width: 140px;
     }
 
-    .header .logo {
-        position: relative;
-        right: 0;
-        top: 0;
-        margin-top: 10px;
-        margin-bottom: -25px;
+    .productsPage .productDescription, .productsPage .priceTag {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 455px){
+
+    p.subtitle {
+        font-size: 23px;
+    }
+
+    a.title {
+        font-size: 35px;
+    }
+
+    .contactInfo, .openingHours {
+        font-size: 15px;
+    }
+
+    .allServices {
+        font-size: 18px;
+    }
+
+    .logo {
+        font-size: 35px;
+    }
+
+    .centerInfo {
+        padding-top: 200px;
     }
 }
