--- a/website/style.css
+++ b/website/style.css
@@ -18,12 +18,69 @@
     src: url("../fonts/Swirl_Leaf_Monogram/Swirl\ Leaf\ Monogram.ttf");
 }
 
+:root {
+  --color-green1: #38855C;
+  --color-green2: #6FB684;
+  --color-green3: #58997D;
+  --color-green4: #8FC28D;
+  --color-light: #EEF2F5;
+  --color-dark: #272020;
+  --color-grey: #8C8C8C;
+  --color-logo: #144723;
+}
+
 a:hover {
     text-decoration: none;
 }
 
+p {
+    line-height: 0.4ch;
+}
+
+header {
+    left: 50%;
+    transform: translateX(-50%);
+    position: fixed;
+    margin-top: -100px;
+    padding: 3%;
+    padding-top: 120px;
+    padding-bottom: 5px;
+    text-align: center;
+    width: 60%;
+    background-color: var(--color-green2);
+    border-radius: 50px;
+    outline: 1px solid black;
+    outline-offset: -1px;
+    z-index: 100;
+}
+
+header .logo{
+    position: fixed;
+    right: 30px;
+    top: 120px;
+}
+
+a.title {
+    display: block;
+    /* Rotates the title in the header */
+    -webkit-transform: rotate(-2deg);  
+    -moz-transform: rotate(-2deg);
+    -ms-transform: rotate(-2deg);
+    -o-transform: rotate(-2deg);
+    transform: rotate(-2deg);
+    line-height: 40px;
+    text-shadow: var(--color-dark) 2px 2px 4px;
+}
+
+.allServices {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 25px;
+}
+
 .allServices a {
-    color: black;
+    color: var(--color-dark)
 }
 
 body {
@@ -32,22 +89,14 @@ body {
     background-color: white;
 }
 
-p {
-    line-height: 5px;
-}
-
-.subtitle {
-    line-height: 50px;
-}
-
-.mainInfo {
+main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #EEF2F5;
+    background-color: var(--color-light);
     margin: auto;
     width: 66%;
-    outline: 1px solid black;
+    outline: 1px solid var(--color-dark);
     outline-offset: -1px;
 }
 
@@ -55,6 +104,12 @@ p {
     padding-top: 140px;
     display: flex;
     flex-wrap: wrap;
+}
+
+.welcomeMessage {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
 
 .productsPage, .servicesPage, .staffPage {
@@ -107,45 +162,24 @@ p {
     gap: 10px;
 }
 
-.header {
-    left: 50%;
-    transform: translateX(-50%);
-    position: fixed;
-    margin-top: -100px;
-    padding: 3%;
-    padding-top: 120px;
-    padding-bottom: 5px;
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: var(--color-green1);
+    position: relative;
     text-align: center;
-    width: 60%;
-    background-color:#6FB684;
-    border-radius: 50px;
-    outline: 1px solid black;
+    width: 100%;
+    padding: 2%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: fit-content;
+    justify-content: center;
+    outline: 1px solid var(--color-dark);
     outline-offset: -1px;
 }
 
-.allServices {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin-top: 25px;
-}
-
-.welcomeMessage {
-    text-align: center;
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-
-a.title {
-    display: block;
-    /* Rotates the title in the header */
-    -webkit-transform: rotate(-2deg);  
-    -moz-transform: rotate(-2deg);
-    -ms-transform: rotate(-2deg);
-    -o-transform: rotate(-2deg);
-    transform: rotate(-2deg);
-    line-height: 40px;
-    text-shadow: rgb(39, 32, 32) 2px 2px 4px;
+footer a {
+    color: var(--color-light)
 }
 
 .contactInfo, .openingHoursInfo, .aboutUsInfo {
@@ -158,39 +192,12 @@ a.title {
     padding-left: 20px;
 }
 
-.bottomInfo a {
-    color: #EEF2F5;
-}
-
-.header .logo{
-    position: fixed;
-    right: 30px;
-    top: 120px;
-}
-
-.openingHoursTable {
+.openingHoursTable td:first-of-type, .openingHoursTable th:first-of-type{
     text-align: left;
-}
-
-.bottomInfo {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #38855C;
-    position: relative;
-    text-align: center;
-    width: 100%;
-    padding: 2%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    height: fit-content;
-    justify-content: center;
-    outline: 1px solid black;
-    outline-offset: -1px;
 }
 
 .openingHoursTable td:nth-of-type(2), .openingHoursTable th:nth-of-type(2){
     padding-left: 20px;
-    text-align: center;
 }
 
 .textSmall {
@@ -211,39 +218,52 @@ a.title {
 
 .logo {
     font-family: Swirl;
-    color: #144723;
+    color: var(--color-logo)
 }
 
 .textDark {
-    color: rgb(39, 32, 32);
+    color: var(--color-dark)
 }
 
 .textGreyish {
-    color: #8C8C8C;
+    color: var(--color-grey)
 }
 
 .textLight {
-    color: #EEF2F5;
+    color: var(--color-light)
 }
 
 @media screen and (max-width: 1100px) {
+
+    header .logo {
+        display: none;
+    }
+
+    footer {
+        flex-direction: column;
+    }
 
     .contactInfo, .openingHoursInfo, .aboutUsInfo {
         border-left: none;
         border-right: none;
         margin: auto;
     }
-
-    .bottomInfo {
-        flex-direction: column;
-    }
-
-    .header .logo {
-        display: none;
-    }
 }
 
 @media screen and (max-width: 700px){
+
+    header {
+        padding-bottom: 2%;
+        border-radius: 0;
+    }
+
+    header, main, footer {
+        width: 100%;
+    }
+
+    .productsPage img, .servicesPage img, .staffPage img {
+        width: 100%;
+    }
 
     .product, .staffMember {
         width: 40%
@@ -251,19 +271,6 @@ a.title {
     
     .service {
         width: 80%;
-    }
-
-    .productsPage img, .servicesPage img, .staffPage img {
-        width: 100%;
-    }
-
-    .header, .mainInfo, .bottomInfo {
-        width: 100%;
-    }
-
-    .header {
-        padding-bottom: 2%;
-        border-radius: 0;
     }
 }
 
