--- a/website/style.css
+++ b/website/style.css
@@ -19,14 +19,14 @@
 }
 
 :root {
-  --color-green1: #38855C;
-  --color-green2: #6FB684;
-  --color-green3: #58997D;
-  --color-green4: #8FC28D;
-  --color-light: #EEF2F5;
-  --color-dark: #272020;
-  --color-grey: #8C8C8C;
-  --color-logo: #144723;
+    --color-green1: #38855C;
+    --color-green2: #6FB684;
+    --color-green3: #58997D;
+    --color-green4: #8FC28D;
+    --color-light: #EEF2F5;
+    --color-dark: #272020;
+    --color-grey: #8C8C8C;
+    --color-logo: #144723;
 }
 
 a:hover {
@@ -54,7 +54,7 @@ header {
     z-index: 100;
 }
 
-header .logo{
+header .logo {
     position: fixed;
     right: 30px;
     top: 110px;
@@ -63,7 +63,7 @@ header .logo{
 a.title {
     display: block;
     /* Rotates the title in the header */
-    -webkit-transform: rotate(-2deg);  
+    -webkit-transform: rotate(-2deg);
     -moz-transform: rotate(-2deg);
     -ms-transform: rotate(-2deg);
     -o-transform: rotate(-2deg);
@@ -124,7 +124,9 @@ main {
     margin-bottom: 20px;
 }
 
-.productsPage, .servicesPage, .staffPage {
+.productsPage,
+.servicesPage,
+.staffPage {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -135,7 +137,8 @@ main {
     margin-right: 10px;
 }
 
-.productsPage img, .staffPage img {
+.productsPage img,
+.staffPage img {
     border-radius: 50%;
 }
 
@@ -152,7 +155,9 @@ main {
     width: 175px;
 }
 
-.product, .service, .staffMember {
+.product,
+.service,
+.staffMember {
     display: flex;
     flex-direction: column;
     gap: 3px;
@@ -188,24 +193,27 @@ footer {
     justify-content: center;
     outline: 1px solid var(--color-dark);
     outline-offset: -1px;
+    gap: 20px;
 }
 
 footer a {
     color: var(--color-light)
 }
 
-.contactInfo, .openingHoursInfo, .aboutUsInfo {
-    border-right: 2px solid var(--color-light);
-    border-left: 2px solid var(--color-light);
-    padding-right: 20px;
-    padding-left: 20px;
+.divider {
+    align-self: center;
+    width: 2px;
+    height: 200px;
+    background-color: var(--color-light);
 }
 
-.openingHoursTable td:first-of-type, .openingHoursTable th:first-of-type{
+.openingHoursTable td:first-of-type,
+.openingHoursTable th:first-of-type {
     text-align: left;
 }
 
-.openingHoursTable td:nth-of-type(2), .openingHoursTable th:nth-of-type(2){
+.openingHoursTable td:nth-of-type(2),
+.openingHoursTable th:nth-of-type(2) {
     padding-left: 20px;
 }
 
@@ -255,10 +263,11 @@ footer a {
 
     footer {
         flex-direction: column;
-        gap: 10px;
     }
 
-    .contactInfo, .openingHoursInfo, .aboutUsInfo {
+    .contactInfo,
+    .openingHoursInfo,
+    .aboutUsInfo {
         border: none;
         margin: auto;
     }
@@ -271,31 +280,36 @@ footer a {
     }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 700px) {
 
     header {
         padding-bottom: 2%;
         border-radius: 0;
     }
 
-    header, main, footer {
+    header,
+    main,
+    footer {
         width: 100%;
     }
 
-    .productsPage img, .servicesPage img, .staffPage img {
+    .productsPage img,
+    .servicesPage img,
+    .staffPage img {
         width: 100%;
     }
 
-    .product, .staffMember {
+    .product,
+    .staffMember {
         width: 40%
     }
-    
+
     .service {
         width: 80%;
     }
 }
 
-@media screen and (max-width: 455px){
+@media screen and (max-width: 455px) {
 
     .textExtraSmall {
         font-size: clamp(0.8rem, 0.8vw, 4rem);
