--- a/website/style.css
+++ b/website/style.css
@@ -109,12 +109,12 @@ main {
     flex-wrap: wrap;
 }
 
-.momsButton {
+.vatButton {
     margin-left: auto;
     padding-right: 10px;
 }
 
-.momsCheckbox {
+.vatCheckbox {
     scale: 1.6;
 }
 
@@ -255,6 +255,7 @@ footer a {
     color: var(--color-light)
 }
 
+/* following is used at screen widths below 1350px */
 @media screen and (max-width: 1350px) {
 
     header .logo {
@@ -280,6 +281,7 @@ footer a {
     }
 }
 
+/* following is used at screen widths below 700px */
 @media screen and (max-width: 700px) {
 
     header {
@@ -309,6 +311,7 @@ footer a {
     }
 }
 
+/* following is used at screen widths below 455px */
 @media screen and (max-width: 455px) {
 
     .textExtraSmall {
