--- a/website/style.css
+++ b/website/style.css
@@ -53,6 +53,7 @@ header {
     outline: 1px solid black;
     outline-offset: -1px;
     z-index: 100;
+    display: flex;
 }
 
 header .logo {
@@ -71,16 +72,68 @@ a.title {
     transform: rotate(-2deg);
     line-height: 40px;
     text-shadow: var(--color-dark) 2px 2px 4px;
+    margin: auto;
+    margin-bottom: 15px;
+    margin-top: -15px;
+    width: max-content;
+}
+
+.dropDown {
+    position: absolute;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.dropButton {
+    width: 30px;
+    height: 30px;
+    margin-left: auto;
+    background-color:var(--color-green2);
+    border: none;
+    outline: 2px solid var(--color-light);
+    border-radius: 20%;
+    box-shadow: var(--color-dark) 2px 2px 4px;
+}
+
+.dropButton:hover {
+    box-shadow: none;
+}
+
+.dropDownMenu {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-green2);
+    outline: 1px solid var(--color-dark);
+    margin-top: 5px;
+    margin-right: -8px;
+    padding-bottom: 5px;
+    gap: 5px;
+}
+
+.smallishDivider {
+    width: 60px;
+    height: 1px;
+    background-color: var(--color-dark);
+    margin: auto;
+}
+
+.smallDivider {
+    width: 20px;
+    height: 2px;
+    background-color: var(--color-light);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: -1px;
 }
 
 .allServices {
     display: flex;
     justify-content: center;
     gap: 30px;
-    margin-top: 25px;
 }
 
-.allServices a {
+.allServices a, .dropDown a {
     color: var(--color-dark)
 }
 
@@ -208,6 +261,8 @@ footer a {
     background-color: var(--color-light);
 }
 
+
+
 .openingHoursTable td:first-of-type,
 .openingHoursTable th:first-of-type {
     text-align: left;
@@ -320,22 +375,38 @@ footer a {
 /* following is used at screen widths below 455px */
 @media screen and (max-width: 455px) {
 
+    .dropDown {
+        right: 20px;
+    }
+
+    .dropButton {
+        width: 20px;
+        height: 20px;
+    }
+
+    .smallDivider {
+        width: 12px;
+        margin-top: 3px;
+        margin-bottom: 3px;
+        margin-left: -2px;
+    }
+
     .textExtraSmall {
-        font-size: clamp(0.8rem, 0.8vw, 4rem);
+        font-size: clamp(0.6rem, 2.3vw, 4rem);
     }
 
     .textSmall {
-        font-size: clamp(0.9rem, 0.9vw, 4rem);
+        font-size: clamp(0.7rem, 2.7vw, 4rem);
     }
 
     .textMediumSmall {
-        font-size: clamp(1.1rem, 1.3vw, 4rem)
+        font-size: clamp(0.9rem, 3vw, 4rem)
     }
     .textMedium {
-        font-size: clamp(1.4rem, 2vw, 4rem);
+        font-size: clamp(1.2rem, 5vw, 4rem);
     }
 
     .textLarge {
-        font-size: clamp(2.4rem, 3.3vw, 4rem);
+        font-size: clamp(2rem, 7vw, 4rem);
     }
 }
