--- a/website/style.css
+++ b/website/style.css
@@ -53,7 +53,6 @@ header {
     outline: 1px solid black;
     outline-offset: -1px;
     z-index: 100;
-    display: flex;
 }
 
 header .logo {
@@ -81,7 +80,7 @@ a.title {
 .dropDown {
     position: absolute;
     right: 30px;
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
@@ -101,21 +100,26 @@ a.title {
 }
 
 .dropDownMenu {
+    max-height: 0px;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s ease;
+    transform: translateY(-10px);
     display: flex;
     flex-direction: column;
     background-color: var(--color-green2);
     outline: 1px solid var(--color-dark);
     margin-top: 5px;
     margin-right: -8px;
-    padding-bottom: 5px;
     gap: 5px;
+    border-radius: 5%;
 }
 
-.smallishDivider {
-    width: 60px;
-    height: 1px;
-    background-color: var(--color-dark);
-    margin: auto;
+.dropDownMenu.show {
+    max-height: max-content;
+    opacity: 1;
+    transform: translateY(0);
+    padding: 7px;
 }
 
 .smallDivider {
@@ -133,10 +137,6 @@ a.title {
     gap: 30px;
 }
 
-.allServices a, .dropDown a {
-    color: var(--color-dark)
-}
-
 body {
     margin: 0;
     height: 100vh;
@@ -152,10 +152,7 @@ main {
     width: 66%;
     outline: 1px solid var(--color-dark);
     outline-offset: -1px;
-}
-
-.centerInfo {
-    padding-top: 140px;
+    padding-top: 100px;
 }
 
 .sortingOptions {
@@ -294,6 +291,10 @@ footer a {
     font-weight: bold;
 }
 
+.textMediumLarge {
+    font-size: 37px;
+}
+
 .textLarge {
     font-size: 45px;
     font-family: Labrada;
@@ -339,6 +340,25 @@ footer a {
         width: 250px;
         height: 2px;
         background-color: var(--color-light);
+    }
+}
+
+@media screen and (max-width: 910px) {
+    
+    header {
+        display: flex;
+    }
+    
+    .allServices {
+        display: none;
+    }
+
+    .dropDown {
+        display: flex;
+    }
+
+    main {
+        padding-top: 75px;
     }
 }
 
@@ -402,8 +422,13 @@ footer a {
     .textMediumSmall {
         font-size: clamp(0.9rem, 3vw, 4rem)
     }
+
     .textMedium {
         font-size: clamp(1.2rem, 5vw, 4rem);
+    }
+    
+    .textMediumLarge {
+        font-size: clamp(1.7rem, 6vw, 4rem);
     }
 
     .textLarge {
